Fix rounded corners issue on insect cards on ios devices.

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,14 @@ body {
  /* position: fixed; */
 }
 
+input {
+  border-radius: 0
+}
+
+input[type="button"] {
+  -webkit-appearance: none;
+}
+
 .dropdown-menu {
   width: 250px;
 }
